# Jarvis-Project

./: .env  .env.example  .gitignore  AutoInstaller.ps1  AutoInstaller.sh  MANUAL_DE_INSTALACAO_JARVIS.md  README.md  STATUS_PROJETO.md  TUTORIAL_COMPLETO_INSTALACAO_N8N.md  check_agenda.ts  check_errors.mjs  deploy_jarvis.sh  docker-compose.yml  electron-main.cjs  electron-preload.cjs  eslint.config.js  fix-db-any.js  fix-discovery.js  fix-empty-catch.js  fix-empty-catch3.js  fix-hardware.js  fix-password.ts  fix-server.js  fix_widget.cjs  fix_widget.py  index.html  iniciar-jarvis.bat  init-db.sql  install.ps1  install.sh  jarvis-preview.html  metadata.json  new_server.ts  out.js  package.json  requirements.txt  server.ts  test.ts  test_connect_ha.mjs  test_db.ts  (+2 more)
.agents/: AGENTS.md
jarvis_engine/: daemon.py  doctor.py  evals.py  main.py  memory.py  scheduler.py  vision_core.py
prisma/: schema.prisma
scratch/: check_db.cjs  check_db.js
scripts/: fix-design.ts  fix-ts-2.ts  fix-ts.ts  fix_catch.js  refactor-app-ts.ts  refactor-maintenance.ts  refactor-server.ts  refactor.ts  refactor2.ts  remove-google-auth.ts  remove-require.ts  safeguard-replace.ts  test_toggle.js
src/: App.tsx  globals.d.ts  index.css  main.tsx  new_App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
vault/: CORE_contexto_usuario_preferencias_e_objetivos_vinicius.md  Conhecimento_Financeiro_Arquitetura_Investimentos_Padroes.md  Contexto_Vinicius.md  Financeiro_Arquitetura.md  MOC-Jarvis-Skills.md  (+2 more)
(+50 files in other folders)
