[package]
name = "jarvis"
version = "0.1.0"
description = "Jarvis Tauri App"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["global-shortcut-all", "system-tray", "api-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
